--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>React App</title>
+    <title>Email validation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
